Integrated lock service and removed code smells